			   XPCE ChangeLog
			   ==============

* FIXED: Issues resulting from the :: priority change.  Anders Bouwer.

VERSION 6.2.3, distributed with SWI-Prolog 5.2.3
================================================

* ADDED: library(pce_unclip) to show graphicals partly clipped by their own
  window in a small tooltip-like window.  Used by library(pce_toc).

* MODIFIED: Changed priority of :: using in "comment"::<Body> from 1150 xfx
  to 910 xfy.  Must be above \+ (900) to avoid a conflict.

* FIXED: Visual hierarchy tool to find windows displayed in windows.

* ENHANCED: reset the display after an abort.

* FIXED/ENHANCED: Various issues and expensions with PceEmacs bookmark
  window.

* FIXED: MS-Windows: painting (redraw) in windows displayed inside a
  `tabbed_window'.

* ADDED: `menu_item->background'.

* PORT: Define _THREAD_SAFE for FreeBSD if threaded code is requested.

* FIXED: type := value declaration handling of instance variables.  Also
  updated documentation and added some value := new(Term) to the preprocessor.
  Anders Bouwer.


VERSION 6.2.2, distributed with SWI-Prolog 5.2.2
================================================
		
* FIXED: `frame->keyboard_focus' to use window rather than decorator.
  Could make dialog windows with a scrollbar insensitive to typing.

* MODIFIED: `chain<-current_no' now fails if there is no current.

* FIXED: Auto-update of library class index.

* FIXED: Class persistent_frame to be more careful about changed window
  layout when restoring the layout.

* ADDED: `bar_chart->sort' to sort the bars by <-value.

* ADDED: window_tab->untab to transform a tabbed window into a toplevel
  window.

* FIXED: right-click on tab of tabbed_window (exception).

* FIXED: tracepce/1 on Prolog-defined get-methods that fail (crashed).

* FIXED: Properly deal with := in variable initialisations if the value is
  shareable, but converted to a non-shareable value due to the variable
  type.  Anjo Anjewierden.
